<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="64dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/logoSIV"
                android:layout_width="164dp"
                android:layout_height="164dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/agro1" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/titleMTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/agro_store"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
                app:layout_constraintTop_toBottomOf="@id/logoSIV" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/inputMCV"
                style="@style/Widget.Material3.CardView.Outlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleMTV"
                app:layout_constraintWidth_max="500dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/formTitleMTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                        app:layout_constraintTop_toBottomOf="@id/logoSIV" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailMTV"
                            style="@style/Widget.Material3.TextInputEditText.FilledBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:imeOptions="actionNext|flagNoExtractUi|flagNoFullscreen"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.Material3.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pwdMTV"
                            style="@style/Widget.Material3.TextInputEditText.FilledBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen|flagNoEnterAction"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ctaMB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/sign_in"
                        android:text="@string/sign_in" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/guestMB"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/sign_in"
                        android:text="@string/sign_in_as_guest" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/orMTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputMCV" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/socialLLP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orMTV">

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/use_google_account"
                    app:icon="@drawable/google_08" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/use_facebook_account"
                    app:icon="@drawable/facebook_01" />

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.Material3.Button.IconButton.Outlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/use_twitter_account"
                    app:icon="@drawable/twitter_19" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signUpMTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:padding="8dp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/socialLLP" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/languageFAB"
        style="@style/Widget.Material3.FloatingActionButton.Surface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/choose_app_language"
        android:src="@drawable/round_language_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>